[package]
name = "martini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["subsections"]

# Enables blank properties.
#
# With this feature, the parser can also parse 'blank' properties, i.e. properties which have no 
# values. These are dropped otherwise.
# e.g.
#		```ini
#			foo = bar
#			eggs = 
#			basket = cream
#   ```
blankprops = []

# Enables global properties.
#
# This means that the parser can parse properties that come before the very first section. 
# e.g.
#    ```ini
#      foo = bar
#
#      [firstSection]
#      eggs = basket
#    ```
# Normally, the parser wouldn't be able to parse 'foo', and it would be dropped altogether. With 
# the `globalprops` feature, we can parse these as well. The properties that come before the very
# first section are parsed into a special section called `martini_global`. We can then access these
# using `ini.sections[0]` or some similar access method.
globalprops = []

# ===== DELIMITERS FOR PROPERTIES ===== 
#
# Note: Property delimiters are mutually exclusive. This means that once you 
# enable a specific delimiter, you can't use any other. 
#
# Default delimiter is equals sign ('=')

# Features:
# Allows properties to be delimited by colon (':')
colonprops = []

# Allows properties to be delimited by space ('<space>')
spaceprops = []
# ===== DELIMITERS FOR PROPERTIES ===== 

# ===== COMMENT TOKENS =====
# Allows comments to start with different character(s) than the default (';').
#
hash_for_comments = []
# ===== COMMENT TOKENS =====

# ===== SUBSECTIONS =====
subsections = []
# ===== SUBSECTIONS =====
